--- a/wrappers/java/pom.xml
+++ b/wrappers/java/pom.xml
@@ -5,12 +5,12 @@
          http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.interfaces.aegis.test</groupId>
-    <artifactId>aegis-test-interfaces-java</artifactId>
+    <groupId>com.aegis.test</groupId>
+    <artifactId>aegis-test-interfaces</artifactId>
     <version>0.0.1</version>
     <packaging>jar</packaging>
 
-    <name>Aegis Test Interfaces - Java</name>
+    <name>Aegis Test Interfaces</name>
     <description>
         Java wrapper for Aegis Test messaging interfaces.
         Provides type-safe access to Pub/Sub topics and subscriptions.
