--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -61,8 +61,8 @@ jobs:
         working-directory: wrappers/python
         run: |
           twine upload \
-            --repository-url https://pypi.pkg.github.com/peguidotte/interface-aegis-test \
-            --username __token__ \
+            --repository-url https://pypi.pkg.github.com/ \
+            --username peguidotte \
             --password ${{ secrets.TOKEN }} \
             dist/*
 
