--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -37,8 +37,8 @@ jobs:
           MAVEN_USERNAME: github
           MAVEN_PASSWORD: ${{ secrets.TOKEN }}
 
-  publish-python:
-    name: Publish Python Package
+  build-python:
+    name: Build Python Package
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -51,20 +51,18 @@ jobs:
 
       - name: Install build tools
         run: |
-          python -m pip install --upgrade pip setuptools wheel build twine
+          python -m pip install --upgrade pip setuptools wheel build
 
       - name: Build Python package
         working-directory: wrappers/python
         run: python -m build
 
-      - name: Publish to GitHub Packages
-        working-directory: wrappers/python
-        run: |
-          twine upload \
-            --repository-url https://pypi.pkg.github.com/ \
-            --username peguidotte \
-            --password ${{ secrets.TOKEN }} \
-            dist/*
+      - name: Upload to Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: wrappers/python/dist/*
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   validate-versions:
     name: Validate Package Versions
