--- a/wrappers/java/pom.xml
+++ b/wrappers/java/pom.xml
@@ -6,13 +6,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.aegis.test</groupId>
-    <artifactId>aegis-test-interfaces</artifactId>
+    <artifactId>aegis-test-pubsub-interfaces</artifactId>
     <version>0.0.1</version>
     <packaging>jar</packaging>
 
-    <name>Aegis Test Interfaces</name>
+    <name>Aegis Test PubSub Interfaces</name>
     <description>
-        Java wrapper for Aegis Test messaging interfaces.
+        Java wrapper for Aegis Test Pub/Sub messaging interfaces.
         Provides type-safe access to Pub/Sub topics and subscriptions.
     </description>
 
@@ -45,7 +45,7 @@
         <repository>
             <id>github</id>
             <name>GitHub Packages</name>
-            <url>https://maven.pkg.github.com/peguidotte/interface-aegis-test</url>
+            <url>https://maven.pkg.github.com/peguidotte/aegis-test-pubsub-interfaces</url>
         </repository>
     </distributionManagement>
 </project>
